--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="header">
-        <div class="test">
+        <div>
             <a href="./index.html">
                 <img src="./картинки/logo.svg" alt="logo">
             </a>
             <img src="./картинки/search.svg" alt="search">
         </div>
-        <div class="test">
+        <div>
             <div class="menu">
                 <img src="./картинки/menu.svg" alt="">
                 <div class="menu_box">
@@ -33,11 +33,11 @@
                     <div class="menu_section">
                         <h3>WOMAN</h3>
                         <Ul>
-                            <li> <a href="#">Accessories</a></li>
-                            <li>Jackets & Coats</li>
-                            <li>Polos</li>
-                            <li>T-Shirts</li>
-                            <li>Shirts</li>
+                            <li><a href="#">Accessories</a></li>
+                            <li><a href="#">Jackets & Coats</a></li>
+                            <li><a href="#">Polos</a></li>
+                            <li><a href="#">T-Shirts</a></li>
+                            <li><a href="#">Shirts</a></li>
                         </Ul>
                     </div>
                 </div>
@@ -62,29 +62,48 @@
         <div class="promotion_panel">
             <div class="promotion_item">
                 <img src="./картинки/promo-1.png" alt="promo-1">
+                <div class="promotion_text">
+                    <span>30% OFF</span>
+                    <h4>FOR WOMEN</h4>
+                </div>
             </div>
             <div class="promotion_item">
                 <img src="./картинки/promo-2.png" alt="promo-2">
+                <div class="promotion_text">
+                    <span>HOT DEAL</span>
+                    <h4>FOR MEN</h4>
+                </div>
             </div>
             <div class="promotion_item">
                 <img src="./картинки/promo-3.png" alt="promo-3">
+                <div class="promotion_text">
+                    <span>NEW ARRIVALS</span>
+                    <h4>FOR KIDS</h4>
+                </div>
+
             </div>
+        </div>
+        <div class="promotion_panel">
             <div class="promotion_item">
                 <img src="./картинки/promo-4.png" alt="promo-4">
+                <div class="promotion_text">
+                    <span>LUXIROUS & TRENDY</span>
+                    <h4>ACCESORIES</h4>
+                </div>
             </div>
         </div>
-        <div class="product_panel">
+        <!-- <div class="product_panel">
             <div class="product_item">Lorem, ipsum dolor.</div>
             <div class="product_item">Lorem, ipsum dolor.</div>
             <div class="product_item">Lorem, ipsum dolor.</div>
             <div class="product_item">Lorem, ipsum dolor.</div>
             <div class="product_item">Lorem, ipsum dolor.</div>
             <div class="product_item">Lorem, ipsum dolor.</div>
-        </div>
+        </div> -->
 
-    </div>
 
-    <div class="footer"> Footer footer footer </div>
+
+        <div class="footer"> Footer footer footer </div>
 </body>
 
 </html>
