--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
                     <span>NEW ARRIVALS</span>
                     <h4>FOR KIDS</h4>
                 </div>
-
             </div>
-        </div>
-        <div class="promotion_panel">
-            <div class="promotion_item">
+            <div class="promotion_item" style="align-self: stretch;">
                 <img src="./картинки/promo-4.png" alt="promo-4">
                 <div class="promotion_text">
                     <span>LUXIROUS & TRENDY</span>
@@ -92,6 +89,15 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="promotion_panel-2">
+            <div class="promotion_item">
+                <img src="./картинки/promo-4.png" alt="promo-4">
+                <div class="promotion_text">
+                    <span>LUXIROUS & TRENDY</span>
+                    <h4>ACCESORIES</h4>
+                </div>
+            </div>
+        </div> -->
         <!-- <div class="product_panel">
             <div class="product_item">Lorem, ipsum dolor.</div>
             <div class="product_item">Lorem, ipsum dolor.</div>
