add product panel section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 
 <head>
@@ -19,7 +19,7 @@
         </div>
         <div>
             <div class="menu">
-                <img src="./картинки/menu.svg" alt="">
+                <img src="./картинки/menu.svg" alt="menu">
                 <div class="menu_box">
                     <div class="menu_section">
                         <h3>MAN</h3>
@@ -50,7 +50,7 @@
     <div class="front_panel">
         <div class="front_panel_text">
             <h1>THE BRAND</h1>
-            <p>
+            <p class="red_text">
                 OF LUXERIOUS <span class="red_text">FASHION</span>
             </p>
         </div>
@@ -89,27 +89,126 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="promotion_panel-2">
-            <div class="promotion_item">
-                <img src="./картинки/promo-4.png" alt="promo-4">
-                <div class="promotion_text">
-                    <span>LUXIROUS & TRENDY</span>
-                    <h4>ACCESORIES</h4>
+
+        <div class="conteiner">
+            <div class="product_panel-text">Fetured Items</div>
+            <div class="product_panel-text2">Shop for items based on what we featured in this week</div>
+
+            <div class="product_panel">
+                <div class="product_panel-item">
+                    <a class="item-link" href="#">
+                        <div class="item-link-img">
+                            <img class="item-pic" src="./картинки/WINDCOAT.png" alt="товар">
+                            <div class="add-contaner">
+                            </div>
+                        </div>
+                        <div class="text-box">
+                            <p class="item-desk">ELLERY X M'O CAPSULE</p>
+                            <p class="item-price">$52.00</p>
+                        </div>
+                    </a>
+                    <a class="add" href="#">
+                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <p class="add-desc">Add to Cart</p>
+                    </a>
                 </div>
+
+                <div class="product_panel-item">
+                    <a class="item-link" href="#">
+                        <div class="item-link-img">
+                            <img class="item-pic" src="./картинки/costume.png" alt="costume" alt="товар">
+                            <div class="add-contaner">
+                            </div>
+                        </div>
+                        <div class="text-box">
+                            <p class="item-desk">ELLERY X M'O CAPSULE</p>
+                            <p class="item-price">$52.00</p>
+                        </div>
+                    </a>
+                    <a class="add" href="#">
+                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <p class="add-desc">Add to Cart</p>
+                    </a>
+                </div>
+
+                <div class="product_panel-item">
+                    <a class="item-link" href="#">
+                        <div class="item-link-img">
+                            <img class="item-pic" src="./картинки/shorts.png" alt="costume" alt="товар">
+                            <div class="add-contaner">
+                            </div>
+                        </div>
+                        <div class="text-box">
+                            <p class="item-desk">ELLERY X M'O CAPSULE</p>
+                            <p class="item-price">$52.00</p>
+                        </div>
+                    </a>
+                    <a class="add" href="#">
+                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <p class="add-desc">Add to Cart</p>
+                    </a>
+                </div>
+
+                <div class="product_panel-item">
+                    <a class="item-link" href="#">
+                        <div class="item-link-img">
+                            <img class="item-pic" src="./картинки/T-shirt.png" alt="costume" alt="товар">
+                            <div class="add-contaner">
+                            </div>
+                        </div>
+                        <div class="text-box">
+                            <p class="item-desk">ELLERY X M'O CAPSULE</p>
+                            <p class="item-price">$52.00</p>
+                        </div>
+                    </a>
+                    <a class="add" href="#">
+                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <p class="add-desc">Add to Cart</p>
+                    </a>
+                </div>
+
+                <div class="product_panel-item">
+                    <a class="item-link" href="#">
+                        <div class="item-link-img">
+                            <img class="item-pic" src="./картинки/jaket.png" alt="costume" alt="товар">
+                            <div class="add-contaner">
+                            </div>
+                        </div>
+                        <div class="text-box">
+                            <p class="item-desk">ELLERY X M'O CAPSULE</p>
+                            <p class="item-price">$52.00</p>
+                        </div>
+                    </a>
+                    <a class="add" href="#">
+                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <p class="add-desc">Add to Cart</p>
+                    </a>
+                </div>
+
+                <div class="product_panel-item">
+                    <a class="item-link" href="#">
+                        <div class="item-link-img">
+                            <img class="item-pic" src="./картинки/blouse.png" alt="costume" alt="товар">
+                            <div class="add-contaner">
+                            </div>
+                        </div>
+                        <div class="text-box">
+                            <p class="item-desk">ELLERY X M'O CAPSULE</p>
+                            <p class="item-price">$52.00</p>
+                        </div>
+                    </a>
+                    <a class="add" href="#">
+                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <p class="add-desc">Add to Cart</p>
+                    </a>
+                </div>
+
+
+
             </div>
-        </div> -->
-        <!-- <div class="product_panel">
-            <div class="product_item">Lorem, ipsum dolor.</div>
-            <div class="product_item">Lorem, ipsum dolor.</div>
-            <div class="product_item">Lorem, ipsum dolor.</div>
-            <div class="product_item">Lorem, ipsum dolor.</div>
-            <div class="product_item">Lorem, ipsum dolor.</div>
-            <div class="product_item">Lorem, ipsum dolor.</div>
-        </div> -->
-
-
-
-        <div class="footer"> Footer footer footer </div>
+        </div>
+    </div>
+    <div class="footer"> Footer footer footer </div>
 </body>
 
 </html>
