finish footer section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>4
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3f27ae9b39.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -96,7 +100,7 @@
 
             <div class="product_panel">
                 <div class="product_panel-item">
-                    <a class="item-link" href="#">
+                    <a class="item-link" href="1">
                         <div class="item-link-img">
                             <img class="item-pic" src="./картинки/WINDCOAT.png" alt="товар">
                             <div class="add-contaner">
@@ -107,7 +111,7 @@
                             <p class="item-price">$52.00</p>
                         </div>
                     </a>
-                    <a class="add" href="#">
+                    <a class="add" href="2">
                         <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
                         <p class="add-desc">Add to Cart</p>
                     </a>
@@ -202,13 +206,65 @@
                         <p class="add-desc">Add to Cart</p>
                     </a>
                 </div>
-
-
-
             </div>
         </div>
     </div>
-    <div class="footer"> Footer footer footer </div>
+    <button class="button-product">Browse All Product</button>
+    <footer>
+        <div class="footer1">
+            <div class="footer1-content conteiner">
+                <div class="footer1-content_card">
+                    <img src="./картинки/footer/Forma 1.svg." alt="forma1">
+                    <p>Free Delivery</p>
+                </div>
+                <div class="footer1-content_card">
+                    <img src="./картинки/footer/Forma 2.svg" alt="forma2">
+                    <p>Sales & discounts</p>
+                </div>
+                <div class="footer1-content_card">
+                    <img src="./картинки/footer/Forma 3.svg" alt="forma3">
+                    <p>Quality assurance</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer2">
+            <div class="footer2-content conteiner">
+                <div class="footer2-content_card">
+                    <img src="./картинки/footer/Intersect.png" alt="Intersect">
+                    <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+                </div>
+                <div class="footer2-content_card">
+                    <h4>
+                        SUBSCRIBE
+                    </h4>
+                    <p>
+                        FOR OUR NEWLETTER AND PROMOTION
+                    </p>
+                    <form>
+                        <input type="text" placeholder="Enter Your Email">
+                        <button class="button">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer3">
+            <div class="footer3_content conteiner">
+                <p>© 2021 Brand All Rights Reserved.</p>
+                <div>
+                    <!-- <img src="./картинки/social/facebook.svg" alt="logo">
+                    <img src="./картинки/social/instagramm.svg" alt="logo">
+                    <img src="./картинки/social/p.svg" alt="logo">
+                    <img src="./картинки/social/tweeter.svg" alt="logo"> -->
+                    <i class="fa fa-brands fa-vk"></i>
+                    <i class="fa fa-brands fa-vk"></i>
+                    <i class="fa fa-brands fa-vk"></i>
+                    <i class="fa fa-brands fa-vk"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
