--- a/cart/cart.html
+++ b/cart/cart.html
@@ -17,7 +17,7 @@
 
     <script src="https://kit.fontawesome.com/3f27ae9b39.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./cart/cart.css">
+    <link rel="stylesheet" href="./cart.css">
 
 </head>
 
@@ -26,18 +26,18 @@
     <div class="header">
         <div class="container d-flex justify-content-between align-items-center">
             <div>
-                <a href="./index.html">
-                    <img src="./картинки/logo.svg" alt="logo">
+                <a href="../index.html">
+                    <img src="../картинки/logo.svg" alt="logo">
                 </a>
-                <img src="./картинки/search.svg" alt="search">
+                <img src="../картинки/search.svg" alt="search">
             </div>
             <audio controls autoplay loop allow="autoplay">
-                <source src="./track.mp3" type="audio/mpeg">
+                <source src="../track.mp3" type="audio/mpeg">
                 Audio content is not supported by your browser
             </audio>
             <div>
                 <div class="menu">
-                    <img src="./картинки/menu.svg" alt="menu">
+                    <img src="../картинки/menu.svg" alt="menu">
                     <div class="menu_box">
                         <div class="menu_section">
                             <h3>MAN</h3>
@@ -60,8 +60,8 @@
                         </div>
                     </div>
                 </div>
-                <img src="./картинки/profile.svg" alt="">
-                <img src="./картинки/backet.svg" alt="">
+                <img src="../картинки/profile.svg" alt="">
+                <img src="../картинки/backet.svg" alt="">
             </div>
         </div>
     </div>
@@ -77,11 +77,11 @@
         <div class="row">
             <div class="col-7">
                 <div class="cart row d-flex">
-                    <img class="col-5" src="./картинки/jaket.png">
+                    <img class="col-5" src="../картинки/jaket.png">
                     <div class="col-7 p-3">
                         <div class="cart__title d-flex justify-content-between align-items-start mb-3">
                             <h2 class="cart__title-text">MANGO PEOPLE T-SHIRT</h2>
-                            <img class="m-2" src="./картинки/cross-close.svg">
+                            <img class="m-2" src="../картинки/cross-close.svg">
                         </div>
                         <div class="cart__info d-flex m-0">
                             <p>Price:</p>
@@ -102,11 +102,11 @@
                     </div>
                 </div>
                 <div class="cart row d-flex">
-                    <img class="col-5" src="./картинки/T-shirt.png">
+                    <img class="col-5" src="../картинки/T-shirt.png">
                     <div class="col-7 p-3">
                         <div class="cart__title d-flex justify-content-between align-items-start mb-3">
                             <h2 class="cart__title-text">MANGO PEOPLE T-SHIRT</h2>
-                            <img class="m-2" src="./картинки/cross-close.svg">
+                            <img class="m-2" src="../картинки/cross-close.svg">
                         </div>
                         <div class="cart__info d-flex m-0">
                             <p>Price:</p>
@@ -161,15 +161,15 @@
         <div class="footer1">
             <div class="footer1-content container">
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 1.svg." alt="forma1">
+                    <img src="../картинки/footer/Forma 1.svg." alt="forma1">
                     <p>Free Delivery</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 2.svg" alt="forma2">
+                    <img src="../картинки/footer/Forma 2.svg" alt="forma2">
                     <p>Sales & discounts</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 3.svg" alt="forma3">
+                    <img src="../картинки/footer/Forma 3.svg" alt="forma3">
                     <p>Quality assurance</p>
                 </div>
             </div>
@@ -178,7 +178,7 @@
         <div class="footer2">
             <div class="footer2-content container">
                 <div class="footer2-content_card">
-                    <img src="./картинки/footer/Intersect.png" alt="Intersect">
+                    <img src="../картинки/footer/Intersect.png" alt="Intersect">
                     <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
                 </div>
                 <div class="footer2-content_card">
@@ -200,10 +200,6 @@
             <div class="footer3_content container">
                 <p>© 2021 Brand All Rights Reserved.</p>
                 <div>
-                    <!-- <img src="./картинки/social/facebook.svg" alt="logo">
-                <img src="./картинки/social/instagramm.svg" alt="logo">
-                <img src="./картинки/social/p.svg" alt="logo">
-                <img src="./картинки/social/tweeter.svg" alt="logo"> -->
                     <i class="fa fa-brands fa-vk"></i>
                     <i class="fa fa-brands fa-vk"></i>
                     <i class="fa fa-brands fa-vk"></i>
