--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -22,18 +22,18 @@
     <div class="header">
         <div class="container d-flex justify-content-between align-items-center">
             <div>
-                <a href="./index.html">
-                    <img src="./картинки/logo.svg" alt="logo">
+                <a href="../index.html">
+                    <img src="../картинки/logo.svg" alt="logo">
                 </a>
-                <img src="./картинки/search.svg" alt="search">
+                <img src="../картинки/search.svg" alt="search">
             </div>
             <audio controls autoplay loop allow="autoplay">
-                <source src="./track.mp3" type="audio/mpeg">
+                <source src="../track.mp3" type="audio/mpeg">
                 Audio content is not supported by your browser
             </audio>
             <div>
                 <div class="menu">
-                    <img src="./картинки/menu.svg" alt="menu">
+                    <img src="../картинки/menu.svg" alt="menu">
                     <div class="menu_box">
                         <div class="menu_section">
                             <h3>MAN</h3>
@@ -56,8 +56,8 @@
                         </div>
                     </div>
                 </div>
-                <img src="./картинки/profile.svg" alt="">
-                <img src="./картинки/backet.svg" alt="">
+                <img src="../картинки/profile.svg" alt="">
+                <img src="../картинки/backet.svg" alt="">
             </div>
         </div>
     </div>
@@ -69,7 +69,7 @@
             <nav aria-label="breadcrumb" class="align-middle">
                 <ol class="breadcrumb align-middle">
                     <li class="breadcrumb-item align-middle" aria-current="page">
-                        <a href="./index.html">HOME</a>
+                        <a href="../index.html">HOME</a>
                     </li>
                     <li class="breadcrumb-item" aria-current="page">
                         <a href="#">MEN</a>
@@ -149,7 +149,7 @@
             <div class="product_panel-item">
                 <a class="item-link" href="1">
                     <div class="item-link-img">
-                        <img class="item-pic" src="./картинки/WINDCOAT.png" alt="товар">
+                        <img class="item-pic" src="../картинки/WINDCOAT.png" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -167,7 +167,7 @@
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="./картинки/costume.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/costume.png" alt="costume" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -185,7 +185,7 @@
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="./картинки/shorts.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/shorts.png" alt="costume" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -203,7 +203,7 @@
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="./картинки/T-shirt.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/T-shirt.png" alt="costume" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -221,7 +221,7 @@
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="./картинки/jaket.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/jaket.png" alt="costume" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -239,7 +239,7 @@
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="./картинки/blouse.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/blouse.png" alt="costume" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -261,15 +261,15 @@
         <div class="footer1">
             <div class="footer1-content container">
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 1.svg." alt="forma1">
+                    <img src="../картинки/footer/Forma 1.svg." alt="forma1">
                     <p>Free Delivery</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 2.svg" alt="forma2">
+                    <img src="../картинки/footer/Forma 2.svg" alt="forma2">
                     <p>Sales & discounts</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 3.svg" alt="forma3">
+                    <img src="../картинки/footer/Forma 3.svg" alt="forma3">
                     <p>Quality assurance</p>
                 </div>
             </div>
@@ -278,7 +278,7 @@
         <div class="footer2">
             <div class="footer2-content container">
                 <div class="footer2-content_card">
-                    <img src="./картинки/footer/Intersect.png" alt="Intersect">
+                    <img src="../картинки/footer/Intersect.png" alt="Intersect">
                     <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
                 </div>
                 <div class="footer2-content_card">
@@ -312,8 +312,6 @@
             </div>
         </div>
     </footer>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
