task 8 homework. Validate HTML.

--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -27,7 +27,7 @@
                 </a>
                 <img src="../картинки/search.svg" alt="search">
             </div>
-            <audio controls autoplay loop allow="autoplay">
+            <audio controls autoplay loop>
                 <source src="../track.mp3" type="audio/mpeg">
                 Audio content is not supported by your browser
             </audio>
@@ -109,7 +109,7 @@
 
                 </div>
             </div>
-            <DIV class="d-flex mx-auto">
+            <div class="d-flex mx-auto">
                 <p>TRENDING NOW</p>
                 <div class="size-menu position-relative">
                     <p>SIZE</p>
@@ -137,14 +137,11 @@
 
                 </div>
                 <p>PRICE</p>
-            </DIV>
+            </div>
         </div>
     </div>
 
     <div class="container conteiner">
-        <!-- [<div class="product_panel-text">Fetured Items</div>
-        <div class="product_panel-text2">Shop for items based on what we featured in this week</div> -->
-
         <div class="product_panel">
             <div class="product_panel-item">
                 <a class="item-link" href="1">
@@ -158,16 +155,12 @@
                         <p class="item-price">$52.00</p>
                     </div>
                 </a>
-                <!-- <a class="add" href="2">
-                    <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
-                    <p class="add-desc">Add to Cart</p>
-                </a> -->
             </div>
 
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="../картинки/costume.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/costume.png" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -176,16 +169,12 @@
                         <p class="item-price">$52.00</p>
                     </div>
                 </a>
-                <!-- <a class="add" href="#">
-                    <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
-                    <p class="add-desc">Add to Cart</p>
-                </a> -->
             </div>
 
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="../картинки/shorts.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/shorts.png" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -194,16 +183,12 @@
                         <p class="item-price">$52.00</p>
                     </div>
                 </a>
-                <!-- <a class="add" href="#">
-                    <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
-                    <p class="add-desc">Add to Cart</p>
-                </a> -->
             </div>
 
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="../картинки/T-shirt.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/T-shirt.png" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -212,16 +197,12 @@
                         <p class="item-price">$52.00</p>
                     </div>
                 </a>
-                <!-- <a class="add" href="#">
-                    <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
-                    <p class="add-desc">Add to Cart</p>
-                </a> -->
             </div>
 
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="../картинки/jaket.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/jaket.png" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -230,16 +211,12 @@
                         <p class="item-price">$52.00</p>
                     </div>
                 </a>
-                <!-- <a class="add" href="#">
-                    <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
-                    <p class="add-desc">Add to Cart</p>
-                </a> -->
             </div>
 
             <div class="product_panel-item">
                 <a class="item-link" href="#">
                     <div class="item-link-img">
-                        <img class="item-pic" src="../картинки/blouse.png" alt="costume" alt="товар">
+                        <img class="item-pic" src="../картинки/blouse.png" alt="товар">
                         <div class="add-contaner">
                         </div>
                     </div>
@@ -248,28 +225,24 @@
                         <p class="item-price">$52.00</p>
                     </div>
                 </a>
-                <!-- <a class="add" href="#">
-                    <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
-                    <p class="add-desc">Add to Cart</p>
-                </a> -->
             </div>
         </div>
     </div>
-    </div>
+
     <button class="button-product">Browse All Product</button>
     <footer>
         <div class="footer1">
             <div class="footer1-content container">
                 <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 1.svg." alt="forma1">
+                    <img src="../картинки/footer/Forma%201.svg." alt="forma1">
                     <p>Free Delivery</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 2.svg" alt="forma2">
+                    <img src="../картинки/footer/Forma%202.svg" alt="forma2">
                     <p>Sales & discounts</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 3.svg" alt="forma3">
+                    <img src="../картинки/footer/Forma%203.svg" alt="forma3">
                     <p>Quality assurance</p>
                 </div>
             </div>
@@ -300,10 +273,6 @@
             <div class="footer3_content container">
                 <p>© 2021 Brand All Rights Reserved.</p>
                 <div>
-                    <!-- <img src="./картинки/social/facebook.svg" alt="logo">
-                <img src="./картинки/social/instagramm.svg" alt="logo">
-                <img src="./картинки/social/p.svg" alt="logo">
-                <img src="./картинки/social/tweeter.svg" alt="logo"> -->
                     <i class="fa fa-brands fa-vk"></i>
                     <i class="fa fa-brands fa-vk"></i>
                     <i class="fa fa-brands fa-vk"></i>
@@ -317,6 +286,10 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 
+    <script>
+        var audio = document.querySelector("audio");
+        audio.volume = 0.2;
+    </script>
 </body>
 
 </html>
