--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -113,7 +113,7 @@
                         </div>
                     </a>
                     <a class="add" href="2">
-                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <img class="add-pic" src="./картинки/Forma%201%20copy%20(1).svg" alt="card">
                         <p class="add-desc">Add to Cart</p>
                     </a>
                 </div>
@@ -121,7 +121,7 @@
                 <div class="product_panel-item">
                     <a class="item-link" href="#">
                         <div class="item-link-img">
-                            <img class="item-pic" src="./картинки/costume.png" alt="costume" alt="товар">
+                            <img class="item-pic" src="./картинки/costume.png" alt="товар">
                             <div class="add-contaner">
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                         </div>
                     </a>
                     <a class="add" href="#">
-                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <img class="add-pic" src="./картинки/Forma%201%20copy%20(1).svg" alt="card">
                         <p class="add-desc">Add to Cart</p>
                     </a>
                 </div>
@@ -139,7 +139,7 @@
                 <div class="product_panel-item">
                     <a class="item-link" href="#">
                         <div class="item-link-img">
-                            <img class="item-pic" src="./картинки/shorts.png" alt="costume" alt="товар">
+                            <img class="item-pic" src="./картинки/shorts.png" alt="товар">
                             <div class="add-contaner">
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                         </div>
                     </a>
                     <a class="add" href="#">
-                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <img class="add-pic" src="./картинки/Forma%201%20copy%20(1).svg" alt="card">
                         <p class="add-desc">Add to Cart</p>
                     </a>
                 </div>
@@ -157,7 +157,7 @@
                 <div class="product_panel-item">
                     <a class="item-link" href="#">
                         <div class="item-link-img">
-                            <img class="item-pic" src="./картинки/T-shirt.png" alt="costume" alt="товар">
+                            <img class="item-pic" src="./картинки/T-shirt.png" alt="товар">
                             <div class="add-contaner">
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                         </div>
                     </a>
                     <a class="add" href="#">
-                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <img class="add-pic" src="./картинки/Forma%201%20copy%20(1).svg" alt="card">
                         <p class="add-desc">Add to Cart</p>
                     </a>
                 </div>
@@ -175,7 +175,7 @@
                 <div class="product_panel-item">
                     <a class="item-link" href="#">
                         <div class="item-link-img">
-                            <img class="item-pic" src="./картинки/jaket.png" alt="costume" alt="товар">
+                            <img class="item-pic" src="./картинки/jaket.png" alt="товар">
                             <div class="add-contaner">
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                         </div>
                     </a>
                     <a class="add" href="#">
-                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <img class="add-pic" src="./картинки/Forma%201%20copy%20(1).svg" alt="card">
                         <p class="add-desc">Add to Cart</p>
                     </a>
                 </div>
@@ -193,7 +193,7 @@
                 <div class="product_panel-item">
                     <a class="item-link" href="#">
                         <div class="item-link-img">
-                            <img class="item-pic" src="./картинки/blouse.png" alt="costume" alt="товар">
+                            <img class="item-pic" src="./картинки/blouse.png" alt="товар">
                             <div class="add-contaner">
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                         </div>
                     </a>
                     <a class="add" href="#">
-                        <img class="add-pic" src="./картинки/Forma 1 copy (1).svg" alt="card">
+                        <img class="add-pic" src="./картинки/Forma%201%20copy%20(1).svg" alt="card">
                         <p class="add-desc">Add to Cart</p>
                     </a>
                 </div>
@@ -215,15 +215,15 @@
         <div class="footer1">
             <div class="footer1-content conteiner">
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 1.svg." alt="forma1">
+                    <img src="./картинки/footer/Forma%201.svg." alt="forma1">
                     <p>Free Delivery</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 2.svg" alt="forma2">
+                    <img src="./картинки/footer/Forma%202.svg" alt="forma2">
                     <p>Sales & discounts</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="./картинки/footer/Forma 3.svg" alt="forma3">
+                    <img src="./картинки/footer/Forma%203.svg" alt="forma3">
                     <p>Quality assurance</p>
                 </div>
             </div>
@@ -254,10 +254,6 @@
             <div class="footer3_content conteiner">
                 <p>© 2021 Brand All Rights Reserved.</p>
                 <div>
-                    <!-- <img src="./картинки/social/facebook.svg" alt="logo">
-                    <img src="./картинки/social/instagramm.svg" alt="logo">
-                    <img src="./картинки/social/p.svg" alt="logo">
-                    <img src="./картинки/social/tweeter.svg" alt="logo"> -->
                     <i class="fa fa-brands fa-vk"></i>
                     <i class="fa fa-brands fa-vk"></i>
                     <i class="fa fa-brands fa-vk"></i>
