--- a/cart/cart.html
+++ b/cart/cart.html
@@ -31,7 +31,7 @@
                 </a>
                 <img src="../картинки/search.svg" alt="search">
             </div>
-            <audio controls autoplay loop allow="autoplay">
+            <audio controls autoplay loop>
                 <source src="../track.mp3" type="audio/mpeg">
                 Audio content is not supported by your browser
             </audio>
@@ -77,11 +77,11 @@
         <div class="row">
             <div class="col-7">
                 <div class="cart row d-flex">
-                    <img class="col-5" src="../картинки/jaket.png">
+                    <img class="col-5" src="../картинки/jaket.png" alt="">
                     <div class="col-7 p-3">
                         <div class="cart__title d-flex justify-content-between align-items-start mb-3">
                             <h2 class="cart__title-text">MANGO PEOPLE T-SHIRT</h2>
-                            <img class="m-2" src="../картинки/cross-close.svg">
+                            <img class="m-2" src="../картинки/cross-close.svg" alt="">
                         </div>
                         <div class="cart__info d-flex m-0">
                             <p>Price:</p>
@@ -102,11 +102,11 @@
                     </div>
                 </div>
                 <div class="cart row d-flex">
-                    <img class="col-5" src="../картинки/T-shirt.png">
+                    <img class="col-5" src="../картинки/T-shirt.png" alt="">
                     <div class="col-7 p-3">
                         <div class="cart__title d-flex justify-content-between align-items-start mb-3">
                             <h2 class="cart__title-text">MANGO PEOPLE T-SHIRT</h2>
-                            <img class="m-2" src="../картинки/cross-close.svg">
+                            <img class="m-2" src="../картинки/cross-close.svg" alt="">
                         </div>
                         <div class="cart__info d-flex m-0">
                             <p>Price:</p>
@@ -161,15 +161,15 @@
         <div class="footer1">
             <div class="footer1-content container">
                 <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 1.svg." alt="forma1">
+                    <img src="../картинки/footer/Forma%201.svg." alt="forma1">
                     <p>Free Delivery</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 2.svg" alt="forma2">
+                    <img src="../картинки/footer/Forma%202.svg" alt="forma2">
                     <p>Sales & discounts</p>
                 </div>
                 <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 3.svg" alt="forma3">
+                    <img src="../картинки/footer/Forma%203.svg" alt="forma3">
                     <p>Quality assurance</p>
                 </div>
             </div>
@@ -209,12 +209,15 @@
         </div>
     </footer>
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 
+    <script>
+        var audio = document.querySelector("audio");
+        audio.volume = 0.2;
+    </script>
 </body>
+
 
 </html>
