--- a/product/product.html
+++ b/product/product.html
@@ -31,7 +31,7 @@
                 </a>
                 <img src="../картинки/search.svg" alt="search">
             </div>
-            <audio controls autoplay loop allow="autoplay">
+            <audio controls autoplay loop>
                 <source src="../track.mp3" type="audio/mpeg">
                 Audio content is not supported by your browser
             </audio>
@@ -103,13 +103,13 @@
             <p class="price info-panel__price">$561</p>
             <hr>
             <div class="d-flex justify-content-between info-panel__menu">
-                <p>CHOOSE COLOR<img class="" src="../картинки/arrow-down.svg"></img></p>
-                <p>CHOOSE SIZE<img class="" src="../картинки/arrow-down.svg"></img></p>
-                <p>QUANTITY<img class="" src="../картинки/arrow-down.svg"></img></p>
+                <p>CHOOSE COLOR<img class="" src="../картинки/arrow-down.svg" alt=""></p>
+                <p>CHOOSE SIZE<img class="" src="../картинки/arrow-down.svg" alt=""></p>
+                <p>QUANTITY<img class="" src="../картинки/arrow-down.svg" alt=""></p>
             </div>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-outline-danger info-panel__btn"><img src="../картинки/product/Forma 1 copy.svg"
-                        alt=""> Add to
+                <button class="btn btn-outline-danger info-panel__btn"><img
+                        src="../картинки/product/Forma%201%20copy.svg" alt=""> Add to
                     Cart</button>
             </div>
         </div>
@@ -120,7 +120,7 @@
         <div class="card card-panel__card">
             <a class="item-link" href="#">
                 <div class="card-img">
-                    <img class="item-pic" src="../картинки/T-shirt.png" alt="costume" alt="товар">
+                    <img class="item-pic" src="../картинки/T-shirt.png" alt="товар">
                 </div>
                 <div class="card-info">
                     <p class="title card__title">ELLERY X M'O CAPSULE</p>
@@ -152,7 +152,7 @@
         <div class="card card-panel__card">
             <a class="item-link" href="#">
                 <div class="card-img">
-                    <img class="item-pic" src="../картинки/jaket.png" alt="costume" alt="товар">
+                    <img class="item-pic" src="../картинки/jaket.png" alt="товар">
                 </div>
                 <div class="card-info">
                     <p class="title card__title">ELLERY X M'O CAPSULE</p>
@@ -167,22 +167,6 @@
 
 
     <footer>
-        <!-- <div class="footer1" style="display: none">
-            <div class="footer1-content container">
-                <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 1.svg." alt="forma1">
-                    <p>Free Delivery</p>
-                </div>
-                <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 2.svg" alt="forma2">
-                    <p>Sales & discounts</p>
-                </div>
-                <div class="footer1-content_card">
-                    <img src="../картинки/footer/Forma 3.svg" alt="forma3">
-                    <p>Quality assurance</p>
-                </div>
-            </div>
-        </div> -->
 
         <div class="footer2">
             <div class="footer2-content container">
@@ -224,6 +208,10 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 
+    <script>
+        var audio = document.querySelector("audio");
+        audio.volume = 0.2;
+    </script>
 </body>
 
 </html>
